[package]
name = "quotes"
version = "0.1.0"
authors = ["Mark F Rodriguez <macrod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
soup = "0.5"
prettytable-rs = "^0.8"
textwrap = "0.12"
